feat: add gallery prop to the restaurant entity
